tests/typing/bad/testfile-index-i32.rs
fn zero() -> i32 {
    0
}

fn main() {
    let v = vec![0, 1];
    let x = v[zero()];
}